# Deep-Q-learning-for-mobile-edge-computing

./: RL_brain.py  fog_env.py  plot.py  pyproject.toml  random_policy.py  train.py
training/lr/2023-05-17_05-31/plots/: avg_cost.npy  avg_delay.npy  dropped_ratio.npy
training/lr/2023-05-17_05-32/plots/: avg_cost.npy  avg_delay.npy  dropped_ratio.npy
training/lr/2023-05-17_05-33/plots/: avg_cost.npy  avg_delay.npy  dropped_ratio.npy
training/lr/2023-05-17_12-46/plots/: avg_cost.npy  avg_delay.npy  dropped_ratio.npy
training/lr/2023-05-17_14-34/plots/: avg_cost.npy  avg_delay.npy  dropped_ratio.npy
